force-app/main/default/objects/CEMS_Referral__c/CEMS_Referral__c.object-meta.xml
<CustomObject>
    <label>Referral</label>
    <nameField>
        <displayFormat>Ref-{000}</displayFormat>
        <label>Referral no</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referral</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>