force-app/main/default/objects/CEMS_Referral__c/fields/CEMS_Referee_Name__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Referee_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referee Name</label>
    <referenceTo>CEMS_Job_Application__c</referenceTo>
    <relationshipLabel>Referral</relationshipLabel>
    <relationshipName>Referral</relationshipName>
    <type>Lookup</type>
</CustomField>