force-app/main/default/objects/CEMS_Referral__c/fields/CEMS_Referred_By__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Referred_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred By</label>
    <referenceTo>CEMS_Personnel__c</referenceTo>
    <relationshipLabel>Referral</relationshipLabel>
    <relationshipName>Referral</relationshipName>
    <type>Lookup</type>
</CustomField>